--- a/MediaPlayer/Podfile
+++ b/MediaPlayer/Podfile
@@ -1,12 +1,14 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
-
+#source 'git@mgit.dz11.com:douyu-ios/DouyuSpecs.git' # 私有源-武汉
 target 'MediaPlayer' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 		
   pod "GPUImage", :git => 'https://github.com/BradLarson/GPUImage'
-  #  pod 'DYSenseMeEffects', :path => '/Users/menthu/Desktop/SenseMeBusiness/DYSenseMeEffects'
+  
+#  pod 'DYiOSEffectSDK'
+#    pod 'DYSenseMeEffects', :path => '/Users/menthu/Desktop/SenseMeBusiness/DYSenseMeEffects'
 
   # Pods for MediaPlayer
 
